fixed some word wrapping, and users can now /publish and /unpublish guides on frontend.

--- a/public/index.css
+++ b/public/index.css
@@ -7,4 +7,5 @@
     display: flex;
     flex-direction: column;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    word-wrap: break-word;
 }
